Fix header at the top of screen - enables easy navigation back to the home screen when on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ td {
     position: relative;
     margin-top: 25px;
     margin-bottom: 25px;
+    padding-top: 80px;
 }
 
 .callout-text {
@@ -140,6 +141,7 @@ td {
     position: relative;
     margin-top: 25px;
     margin-bottom: 50px;
+    padding-top: 80px;
 }
 
 .fixture-table {
@@ -216,7 +218,6 @@ tr.table-header {
 /*---------- Contact Container ----------*/
 .contact-container {
     position: relative;
-    min-height: 100vh;
     text-align: center;
     padding-top: 100px;
     padding-bottom: 50px;
